--- a/package.json
+++ b/package.json
@@ -1,42 +1,56 @@
 {
   "name": "fueldeliveryapp",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Fuel Delivery App",
+  "main": "server.mjs",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs",
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit --detectOpenHandles",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watchAll --forceExit --detectOpenHandles",
+    "lint": "eslint . --fix",
+    "format": "prettier --write ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "chart.js": "^4.4.7",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
+    "dotenv": "^16.4.1",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "express-validator": "^7.2.1",
-    "express-winston": "^4.2.0",
-    "geolib": "^3.3.4",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^6.15.0",
     "helmet": "^8.0.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
-    "mongoose-paginate-v2": "^1.9.0",
-    "mysql": "^2.18.1",
+    "mongoose": "^8.10.0",
     "mysql2": "^3.12.0",
-    "nodemailer": "^6.10.0",
-    "socket.io": "^4.8.1",
-    "supertest": "^7.0.0",
-    "winston": "^3.17.0"
+    "nodemon": "^3.1.9",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "xss-clean": "^0.1.4"
   },
-  "description": "",
   "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
+    "@babel/register": "^7.22.15",
+    "@babel/plugin-transform-runtime": "^7.x.x",
+    "@babel/runtime": "^7.x.x",
+    "babel-jest": "^29.x.x",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.8.0",
+    "eslint-plugin-ejs": "^0.0.2",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.x.x",
+    "jest-mock-extended": "^3.0.6",
+    "mongodb-memory-server": "^8.8.0",
+    "prettier": "^3.2.5",
+    "supertest": "^7.0.0"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
