--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "fueldeliveryapp",
   "version": "1.0.0",
   "description": "Fuel Delivery App",
-  "main": "server.mjs",
+  "main": "src/server.mjs",
   "type": "module",
   "scripts": {
-    "start": "node server.mjs",
-    "dev": "nodemon server.mjs",
+    "start": "node src/server.mjs",
+    "dev": "nodemon src/server.mjs",
+    "build": "mkdir -p dist && cp -r src/* package.json .env dist/ && cd dist && npm install --omit=dev",
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit --detectOpenHandles",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watchAll --forceExit --detectOpenHandles",
     "lint": "eslint . --fix",
