Updated .env and database configuration

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,11 @@
+# Server Configuration
 PORT=3000
-NODE_ENV=production 
+NODE_ENV=production
+
+# MySQL Database Configuration
+DB_HOST=dpg-cunj0p23esus73ciric0-a
+DB_USER=fuel_delivery_user
+DB_PASSWORD=vcDMwd55ajsFUnZqlPuItAm1k9bIn88N
+DB_NAME=fuel_delivery_db
+
+# Other configurations... 
