--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,37 @@
-# Node.js dependencies
+# Node
 node_modules/
+npm-debug.log
+dist/
 
-# .env file containing sensitive data
+# Environment
 .env
+.env.*
+!.env.example
+
+# Frontend
+frontend/build/
+frontend/node_modules/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 
 # Logs
 logs/
 *.log
 
-# OS-specific files
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
 Thumbs.db
 
-# IDE files
-.vscode/
-.idea/
-
 # Coverage reports
 coverage/
-
-# Build output
-dist/
-build/
 
 # Docker build artifacts
 .docker/
