--- a/package.json
+++ b/package.json
@@ -1,58 +1,15 @@
 {
-  "name": "fueldeliveryapp",
+  "name": "fuel-delivery-app",
   "version": "1.0.0",
-  "description": "Fuel Delivery App",
-  "main": "server.mjs",
-  "type": "module",
+  "description": "Fuel Delivery Application",
   "scripts": {
     "start": "node server.mjs",
-    "dev": "nodemon server.mjs",
-    "build": "mkdir -p dist && cp -r routes controllers models middleware config server.mjs package.json .env.production dist/.env && cd dist && npm install --omit=dev",
-    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit --detectOpenHandles",
-    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watchAll --forceExit --detectOpenHandles",
-    "lint": "eslint . --fix",
-    "format": "prettier --write ."
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^6.15.0",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0",
-    "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9",
-    "pg": "^8.13.3",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "xss-clean": "^0.1.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.8",
-    "@babel/plugin-transform-runtime": "^7.x.x",
-    "@babel/preset-env": "^7.26.8",
-    "@babel/register": "^7.22.15",
-    "@babel/runtime": "^7.x.x",
-    "babel-jest": "^29.x.x",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.8.0",
-    "eslint-plugin-ejs": "^0.0.2",
-    "eslint-plugin-html": "^8.1.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.x.x",
-    "jest-mock-extended": "^3.0.6",
-    "mongodb-memory-server": "^8.8.0",
-    "prettier": "^3.2.5",
-    "supertest": "^7.0.0"
-  },
-  "author": "Your Name",
-  "license": "ISC"
+    "dev:server": "nodemon server.mjs",
+    "dev:client": "cd frontend && npm start",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "build": "npm run build:server && npm run build:client",
+    "build:server": "mkdir -p dist && cp -r routes controllers models middleware config public server.mjs package.json .env.production dist/.env",
+    "build:client": "cd frontend && npm install && npm run build",
+    "test": "jest"
+  }
 }
