--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:client": "cd frontend && npm start",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build": "npm run build:server && npm run build:client",
-    "build:server": "mkdir -p dist && cp -r routes controllers models middleware config public server.mjs package.json .env.production dist/.env",
+    "build:server": "mkdir -p dist && cp -r routes controllers config middleware models server.mjs package.json .env.production dist/.env",
     "build:client": "cd frontend && npm install && npm run build",
     "test": "jest"
   }
