--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fuel-delivery-app",
   "version": "1.0.0",
   "description": "Fuel Delivery Application",
+  "type": "module",
   "scripts": {
     "start": "node server.mjs",
     "dev:server": "nodemon server.mjs",
@@ -10,9 +11,11 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "if not exist dist mkdir dist && xcopy /E /I routes dist\\routes && xcopy /E /I controllers dist\\controllers && xcopy /E /I config dist\\config && xcopy /E /I middleware dist\\middleware && xcopy /E /I models dist\\models && copy server.mjs dist\\ && copy package.json dist\\ && copy .env.production dist\\.env",
     "build:client": "cd frontend && npm install && npm run build",
-    "test": "jest"
+    "test": "jest",
+    "test:connection": "node scripts/test-connection.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
     "dotenv": "^16.4.7",
     "pg": "^8.13.3"
