--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "type": "module",
   "scripts": {
     "start": "node server.mjs",
-    "dev:server": "nodemon server.mjs",
-    "dev:client": "cd frontend && npm start",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "build": "npm run build:server && npm run build:client",
-    "build:server": "if not exist dist mkdir dist && xcopy /E /I routes dist\\routes && xcopy /E /I controllers dist\\controllers && xcopy /E /I config dist\\config && xcopy /E /I middleware dist\\middleware && xcopy /E /I models dist\\models && copy server.mjs dist\\ && copy package.json dist\\ && copy .env.production dist\\.env",
-    "build:client": "cd frontend && npm install && npm run build",
-    "test": "jest",
-    "test:connection": "node scripts/test-connection.js"
+    "dev": "nodemon server.mjs",
+    "build": "npm install"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "bcryptjs": "^3.0.0",
-    "dotenv": "^16.4.7",
-    "pg": "^8.13.3"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
