--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,14 @@
 services:
   - type: web
-    name: fuel-delivery-app
+    name: fuel-delivery-backend
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: cd dist && NODE_ENV=production node server.mjs
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-      - key: MONGO_URI
-        sync: false
-      - key: JWT_SECRET
-        sync: false
       - key: DB_HOST
-        value: dpg-cunj0p23esus73ciric0-a
+        value: dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com
       - key: DB_USER
         value: fuel_delivery_user
       - key: DB_PASSWORD
@@ -21,14 +17,6 @@ services:
         value: fuel_delivery_db
       - key: PORT
         value: 5432
-      - key: ADMIN_EMAIL
-        value: eeznetsolutions@gmail.com
-    buildFilter:
-      paths:
-        - package.json
-        - src/**
-        - public/**
-        - database/**
 
   - type: pserv
     name: mysql
