--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,14 @@ services:
   - type: web
     name: fuel-delivery-backend
     env: node
+    plan: free
     buildCommand: npm install
-    startCommand: npm start
+    startCommand: node server.mjs
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 3000
       - key: DB_HOST
         value: dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com
       - key: DB_USER
