--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fuel-delivery-app",
   "version": "1.0.0",
-  "description": "Fuel Delivery Application",
   "type": "module",
   "scripts": {
     "start": "node server.mjs",
     "dev": "nodemon server.mjs",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "build": "npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -23,5 +23,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
