--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: fuel-delivery-backend
+    name: fueldeliverywebapp
     env: node
+    region: oregon
     plan: free
     buildCommand: npm install
     startCommand: node server.mjs
@@ -24,6 +25,8 @@ services:
         value: your-secret-key-here
       - key: MONGO_URI
         value: mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
+    healthCheckPath: /api/health
+    autoDeploy: true
 
 databases:
   - name: fuel-delivery-db
