--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
     "test:watch": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "build": "npm install"
+    "build": "npm install",
+    "predeploy": "node scripts/test-deployment.js",
+    "deploy": "git push render main"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -20,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "pg": "^8.11.3",
+    "socket.io": "^4.8.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
