--- a/render.yaml
+++ b/render.yaml
@@ -10,25 +10,17 @@ services:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 3000
-      - key: DB_HOST
-        value: dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com
-      - key: DB_USER
-        value: fuel_delivery_user
-      - key: DB_PASSWORD
-        value: vcDMwd55ajsFUnZqlPuItAm1k9bIn88N
-      - key: DB_NAME
-        value: fuel_delivery_db
-      - key: DB_PORT
-        value: 5432
+        value: 10000
       - key: JWT_SECRET
-        value: your-secret-key-here
+        generateValue: true
       - key: MONGO_URI
-        value: mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
-      - key: POSTGRES_URL
-        sync: false
-      - key: GOOGLE_MAPS_API_KEY
-        sync: false
+        fromDatabase:
+          name: fuel-delivery-db
+          property: connectionString
+      - key: DATABASE_URL
+        fromDatabase:
+          name: fuel-delivery-db
+          property: connectionString
     healthCheckPath: /api/health
     autoDeploy: true
 
