--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "fuel-delivery-app",
   "version": "1.0.0",
   "type": "module",
+  "exports": {
+    "./models/*": "./models/*.mjs",
+    "./controllers/*": "./controllers/*.mjs"
+  },
   "scripts": {
     "start": "node server.mjs",
     "dev": "nodemon server.mjs",
@@ -13,17 +17,17 @@
     "deploy": "git push render main"
   },
   "dependencies": {
-    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "pg": "^8.11.3",
-    "socket.io": "^4.8.1",
+    "socket.io": "^4.7.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
@@ -39,7 +43,8 @@
     "testEnvironment": "node",
     "transform": {},
     "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
+      "^(\\.{1,2}/.*)\\.js$": "$1",
+      "^(\\.{1,2}/.*)\\.mjs$": "$1"
     },
     "testMatch": [
       "**/test/**/*.test.mjs"
