--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install
+    buildCommand: npm ci
     startCommand: node server.mjs
     envVars:
       - key: NODE_ENV
@@ -14,13 +14,9 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: MONGO_URI
-        fromDatabase:
-          name: fuel-delivery-db
-          property: connectionString
+        value: mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
       - key: DATABASE_URL
-        fromDatabase:
-          name: fuel-delivery-db
-          property: connectionString
+        value: postgres://fuel_delivery_user:vcDMwd55ajsFUnZqlPuItAm1k9bIn88N@dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com/fuel_delivery_db
     healthCheckPath: /api/health
     autoDeploy: true
 
