--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,22 +2,33 @@
   "name": "fuel-delivery-frontend",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build --emptyOutDir",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
-    "@mui/icons-material": "^5.11.16",
-    "axios": "^1.4.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@react-google-maps/api": "^2.19.2",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.20.1",
+    "socket.io-client": "^4.7.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "proxy": "http://localhost:3000",
   "browserslist": {
@@ -32,4 +43,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
