--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test:watch": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "predeploy": "node scripts/test-deployment.js",
-    "deploy": "git push render main"
+    "deploy": "git push render main",
+    "prebuild": "if not exist frontend\\public mkdir frontend\\public && if not exist public mkdir public",
+    "build": "cd frontend && npm install && npm run build",
+    "postbuild": "xcopy /E /I frontend\\dist public"
   },
   "dependencies": {
     "axios": "^1.7.9",
