--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,20 @@
 services:
   - type: web
+    name: fuel-delivery-frontend
+    env: static
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/dist
+    pullRequestPreviewsEnabled: true
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+
+  - type: web
     name: fuel-delivery-backend
     env: node
     region: oregon
