--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,9 @@
 services:
   - type: web
-    name: fuel-delivery-frontend
+    name: fueldeliveryapp-1
     env: static
     buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
-    pullRequestPreviewsEnabled: true
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: no-cache
+    staticPublishPath: ./dist
     routes:
       - type: rewrite
         source: /*
