--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "predeploy": "node scripts/test-deployment.js",
     "deploy": "git push render main",
-    "build": "cd frontend && npm install && NODE_ENV=production vite build",
+    "build": "cd frontend && npm install && npm run build",
     "postbuild": "xcopy /E /I frontend\\dist public"
   },
   "dependencies": {
