Fix CORS configuration and add credentials support

--- a/render.yaml
+++ b/render.yaml
@@ -31,6 +31,8 @@ services:
         value: mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
       - key: DATABASE_URL
         value: postgres://fuel_delivery_user:vcDMwd55ajsFUnZqlPuItAm1k9bIn88N@dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com/fuel_delivery_db
+      - key: CORS_ORIGIN
+        value: https://fueldeliveryapp-1.onrender.com
     healthCheckPath: /api/health
     autoDeploy: true
 
