Fix CORS configuration and API endpoints for production deployment

--- a/.env.production
+++ b/.env.production
@@ -12,3 +12,5 @@ DB_NAME=fuel_delivery_db
 
 VITE_API_URL=https://fueldeliverywebapp.onrender.com/api
 VITE_GOOGLE_MAPS_KEY=your_google_maps_key
+
+VITE_API_URL=https://fuel-delivery-backend.onrender.com/api
