--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,29 @@
 # Server Configuration
-PORT=5432
+PORT=10000
 NODE_ENV=production
 
-# MySQL Database Configuration
+# Database Configuration
 DB_HOST=dpg-cunj0p23esus73ciric0-a
+DB_PORT=5432  # PostgreSQL port
 DB_USER=fuel_delivery_user
 DB_PASSWORD=vcDMwd55ajsFUnZqlPuItAm1k9bIn88N
 DB_NAME=fuel_delivery_db
 
-# Other configurations... 
+# API Configuration
+API_URL=https://fueldeliverywebapp.onrender.com
+FRONTEND_URL=https://fueldeliveryapp-1.onrender.com
 
-VITE_API_URL=https://fueldeliverywebapp.onrender.com/api
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_here
+
+# MongoDB Configuration
+MONGO_URI=mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
+
+# CORS Configuration
+CORS_ORIGIN=https://fueldeliveryapp-1.onrender.com
+
+# Vite Configuration (for frontend)
+VITE_API_URL=https://fuel-delivery-backend.onrender.com
 VITE_GOOGLE_MAPS_KEY=your_google_maps_key
 
-VITE_API_URL=https://fuel-delivery-backend.onrender.com/api
+# Other configurations... 
