fix: update API configuration and add deployment testing - Add /api endpoints - Update CORS configuration - Add deployment test script - Update environment variables - Fix logger configuration

--- a/.env.production
+++ b/.env.production
@@ -23,7 +23,7 @@ MONGO_URI=mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongod
 CORS_ORIGIN=https://fueldeliveryapp-1.onrender.com
 
 # Vite Configuration (for frontend)
-VITE_API_URL=https://fuel-delivery-backend.onrender.com
+VITE_API_URL=https://fueldeliverywebapp.onrender.com
 VITE_GOOGLE_MAPS_KEY=your_google_maps_key
 
 # Other configurations... 
