--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
     "test:watch": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "predeploy": "node scripts/test-deployment.js",
+    "test:deployment": "node scripts/test-deployment.mjs",
+    "test:deployment:prod": "cross-env NODE_ENV=production node scripts/test-deployment.mjs",
+    "predeploy": "npm run test:deployment",
     "deploy": "git push render main",
     "build": "cd frontend && npm install && npm run build",
     "postbuild": "xcopy /E /I frontend\\dist public",
