fix: correct server file extension and npm start configuration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fuel-delivery-app",
   "version": "1.0.0",
   "type": "module",
+  "main": "server.mjs",
   "scripts": {
     "start": "node server.mjs",
     "dev": "nodemon server.mjs",
