fix: correct server configuration and deployment setup

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: fueldeliverywebapp
     env: node
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: |
+      npm install
+      npm run build
+    startCommand: node server.mjs
     envVars:
       - key: NODE_ENV
         value: production
