Prepare for Render deployment

--- a/.env.production
+++ b/.env.production
@@ -3,21 +3,17 @@ PORT=3000
 NODE_ENV=production
 
 # Database Configuration
-DB_HOST=dpg-cunj0p23esus73ciric0-a
-DB_PORT=5432
-DB_USER=fuel_delivery_user
-DB_PASSWORD=vcDMwd55ajsFUnZqlPuItAm1k9bIn88N
-DB_NAME=fuel_delivery_db
-
-# API Configuration
-API_URL=https://fueldeliverywebapp.onrender.com
-FRONTEND_URL=https://fueldeliveryapp-1.onrender.com
+MONGO_URI=mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
+DATABASE_URL=postgres://fuel_delivery_user:vcDMwd55ajsFUnZqlPuItAm1k9bIn88N@dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com/fuel_delivery_db
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_here
 
-# MongoDB Configuration
-MONGO_URI=mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
+# API Configuration
+API_URL=https://fueldeliverywebapp.cyclic.app
+
+# Frontend Configuration
+FRONTEND_URL=https://fueldeliveryapp-1.onrender.com
 
 # CORS Configuration
 CORS_ORIGIN=https://fueldeliveryapp-1.onrender.com
@@ -25,8 +21,5 @@ CORS_ORIGIN=https://fueldeliveryapp-1.onrender.com
 # Vite Configuration (for frontend)
 VITE_API_URL=https://fueldeliverywebapp.onrender.com
 VITE_GOOGLE_MAPS_KEY=your_google_maps_key
-
-# Database URL (for Render)
-DATABASE_URL=postgres://fuel_delivery_user:vcDMwd55ajsFUnZqlPuItAm1k9bIn88N@dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com/fuel_delivery_db
 
 # Other configurations... 
