--- a/render.yaml
+++ b/render.yaml
@@ -31,7 +31,11 @@ services:
     name: fueldeliverywebapp-frontend
     env: static
     buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/dist
+    staticPublishPath: ./frontend/dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: VITE_API_URL
         value: https://fueldeliverywebapp.onrender.com/api
