--- a/.env.production
+++ b/.env.production
@@ -19,7 +19,7 @@ FRONTEND_URL=https://fueldeliveryapp-1.onrender.com
 CORS_ORIGIN=https://fueldeliveryapp-1.onrender.com
 
 # Vite Configuration (for frontend)
-VITE_API_URL=https://fueldeliverywebapp.onrender.com
+VITE_API_URL=https://fueldeliverywebapp.onrender.com/api
 VITE_GOOGLE_MAPS_KEY=your_google_maps_key
 
 # Other configurations... 
