fix: CORS configuration and database connections
- Updated CORS middleware to allow frontend origin
- Fixed PostgreSQL connection configuration
- Added better error logging
- Updated API endpoints and interceptors
- Fixed manifest.json

--- a/.env.production
+++ b/.env.production
@@ -10,7 +10,7 @@ DATABASE_URL=postgres://fuel_delivery_user:vcDMwd55ajsFUnZqlPuItAm1k9bIn88N@dpg-
 JWT_SECRET=your_jwt_secret_here
 
 # API Configuration
-API_URL=https://fueldeliverywebapp.cyclic.app
+API_URL=https://fueldeliverywebapp.onrender.com
 
 # Frontend Configuration
 FRONTEND_URL=https://fueldeliveryapp-1.onrender.com
