--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
+  # Backend API service
   - type: web
-    name: fuel-delivery-backend
+    name: fueldeliverywebapp
     env: node
+    plan: free
     buildCommand: npm install
     startCommand: node server.mjs
     envVars:
@@ -10,27 +12,22 @@ services:
       - key: PORT
         value: 3000
       - key: MONGO_URI
-        fromDatabase:
-          name: fuel-delivery-mongodb
-          property: connectionString
+        value: mongodb+srv://eeznetsolutions:Yp3mmebgxnQHA6XG@fueldelapp.iaiqh.mongodb.net/fuelDeliveryApp?retryWrites=true&w=majority
       - key: DATABASE_URL
-        fromDatabase:
-          name: fuel-delivery-postgres
-          property: connectionString
+        value: postgres://fuel_delivery_user:vcDMwd55ajsFUnZqlPuItAm1k9bIn88N@dpg-cunj0p23esus73ciric0-a.oregon-postgres.render.com/fuel_delivery_db
+      - key: JWT_SECRET
+        generateValue: true
       - key: CORS_ORIGIN
         value: https://fueldeliveryapp-1.onrender.com
     healthCheckPath: /api/health
     autoDeploy: true
 
+  # Frontend service
   - type: web
-    name: fueldeliverywebapp-frontend
+    name: fueldeliveryapp-1
     env: static
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: ./frontend/dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
     envVars:
       - key: VITE_API_URL
         value: https://fueldeliverywebapp.onrender.com/api
